--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
       <td><img src="kunal circle.png" alt="kunal profile pic" height="350" width="300"></td>
       <td><h1>Kunal Agrawal</h1>
-      <p><em>Founder and CEO of <strong><a href="https://www.appbrewery.co/">The Smart Seat</a></strong>.</em></p>
+      <p><em>Founder and CEO of <strong><a href="https://in.bookmyshow.com/pune">The Smart Seat</a></strong>.</em></p>
       <p>I am a Web developer and a Software developer.</p></td>
     </tr>
   </table>
